# 2d-game-thing

./: .gitignore  CMakeLists.txt
src/: animations.hpp  entity.cpp  entity.hpp  file.cpp  file.hpp  game.cpp  game.hpp  main.cpp  main.hpp  render.cpp  render.hpp
src/imageconvert/: main.cpp  main.hpp
src/rectangleconvert/: rectangleconvert.cpp
